<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Diaspora</string>
    <string name="app_search_hint">Search...</string>
   
    <string name="menu_home">Home</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_aspects">Aspects</string>
    <string name="menu_invite">Invite</string>
    <string name="menu_exit">Exit</string>
     
    <string name="login_diaspora_id_hint">user@example.com</string>
    <string name="login_diaspora_id_empty_error">Empty ID!</string>
    <string name="login_button_label">Sign In</string>
    
    <string name="welcome_message">Welcome human! You\'re looking into an app without any functionality!</string>
</resources>
